--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="login-page">
     <div class="login-container">
         <div class="login-header">
-            <img src="images/chrisbaby-logo.png" alt="Chris-Baby SAS Ltd. Logo" class="login-logo">
+            <img src="https://pink-quiet-wolf-922.mypinata.cloud/ipfs/bafybeigv5p43ezk42i75dxliwo5biyct4yzdgvuihvp5udkipidvd6b5je" alt="Chris-Baby SAS Ltd. Logo" class="login-logo">
             <h1>Admin Portal</h1>
         </div>
         <form class="login-form" action="dashboard.html" method="GET">
