--- a/employees.html
+++ b/employees.html
@@ -12,7 +12,7 @@
     <div class="admin-wrapper">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="images/chrisbaby-logo.png" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
+                <img src="https://pink-quiet-wolf-922.mypinata.cloud/ipfs/bafybeigv5p43ezk42i75dxliwo5biyct4yzdgvuihvp5udkipidvd6b5je" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
                 <h2>Chris-Baby Admin</h2>
             </div>
             <nav class="main-nav">
