--- a/dashboard.html
+++ b/dashboard.html
@@ -14,9 +14,12 @@
             <div class="sidebar-header">
                 <img src="https://pink-quiet-wolf-922.mypinata.cloud/ipfs/bafybeigv5p43ezk42i75dxliwo5biyct4yzdgvuihvp5udkipidvd6b5je" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
                 <h2>Chris-Baby Admin</h2>
-            </div>
-            <nav class="main-nav">
-                <ul>
+               <button class="close-sidebar-btn"><i class="fas fa-times"></i></button>
+            </div>  
+          <nav class="main-nav">
+        </nav>
+         </aside>
+                 <ul>
                     <li class="active"><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li><a href="employees.html"><i class="fas fa-users"></i> Employees Management</a></li>
                     <li><a href="#"><i class="fas fa-handshake"></i> Clients Management</a></li>
