--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Chris-Baby SAS Ltd.</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -14,8 +13,7 @@
             <div class="sidebar-header">
                 <img src="https://pink-quiet-wolf-922.mypinata.cloud/ipfs/bafybeigv5p43ezk42i75dxliwo5biyct4yzdgvuihvp5udkipidvd6b5je" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
                 <h2>Chris-Baby Admin</h2>
-                <button class="close-sidebar-btn"><i class="fas fa-times"></i></button>
-            </div>
+                <button class="close-sidebar-btn"><i class="fas fa-times"></i></button> </div>
             <nav class="main-nav">
                 <ul>
                     <li class="active"><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
@@ -30,9 +28,6 @@
                 </ul>
             </nav>
         </aside>
-        </div>
-</body>
-
         <main class="main-content">
             <header class="navbar">
                 <div class="navbar-left">
@@ -45,8 +40,7 @@
                 </div>
             </header>
 
-            <section class="dashboard-overview">
-                <div class="card-grid">
+            <section class="dashboard-overview content-section"> <div class="card-grid">
                     <div class="card overview-card">
                         <div class="card-icon"><i class="fas fa-users"></i></div>
                         <div class="card-content">
@@ -78,8 +72,7 @@
                 </div>
             </section>
 
-            <section class="recent-activities">
-                <h2>Recent Activities</h2>
+            <section class="recent-activities content-section"> <h2>Recent Activities</h2>
                 <div class="card">
                     <ul>
                         <li><i class="fas fa-check-circle activity-icon"></i> New employee "John Doe" added. (2 mins ago)</li>
@@ -90,8 +83,7 @@
                 </div>
             </section>
 
-            <section class="quick-links">
-                <h2>Quick Links</h2>
+            <section class="quick-links content-section"> <h2>Quick Links</h2>
                 <div class="card-grid">
                     <a href="employees.html" class="card quick-link-card">
                         <i class="fas fa-user-plus"></i> Add New Employee
