--- a/payments-invoices.html
+++ b/payments-invoices.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payments & Invoices - Chris-Baby SAS Ltd.</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="https://cdnjs://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="admin-wrapper">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="images/chrisbaby-logo.png" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
+                <img src="https://pink-quiet-wolf-922.mypinata.cloud/ipfs/bafybeigv5p43ezk42i75dxliwo5biyct4yzdgvuihvp5udkipidvd6b5je" alt="Chris-Baby SAS Ltd. Logo" class="sidebar-logo">
                 <h2>Chris-Baby Admin</h2>
-            </div>
+                <button class="close-sidebar-btn"><i class="fas fa-times"></i></button> </div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
