--- a/dashboard.html
+++ b/dashboard.html
@@ -19,13 +19,13 @@
                 <ul>
                     <li class="active"><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
                     <li><a href="employees.html"><i class="fas fa-users"></i> <span>Employees Management</span></a></li>
-                    <li><a href="#"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
+                    <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
+                    <li><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
-                    <li><a href="#"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
-                    <li><a href="#"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
+                    <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
+                    <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="#"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
-                    <li><a href="#"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
+                    <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
         </aside>
