--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
                     <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
-                    <li><a href="#"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
