--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,12 @@
                     <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
                     <li><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
+                    <li><a href="payroll.html"><i class="fas fa-money-check-alt"></i> <span>Payroll</span></a></li>
                     <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="compliance.html"><i class="fas fa-clipboard-check"></i> <span>Compliance</span></a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> <span>Reports & Analytics</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
@@ -94,11 +97,12 @@
                     <a href="payments-invoices.html" class="card quick-link-card">
                         <i class="fas fa-plus-square"></i> Create New Invoice
                     </a>
-                    <a href="#" class="card quick-link-card">
+                    <a href="reports.html" class="card quick-link-card">
                         <i class="fas fa-book"></i> View Reports
                     </a>
                 </div>
-            </section> <footer>
+            </section>
+            <footer>
                 <p>&copy; 2025 Chris-Baby SAS Ltd. All rights reserved.</p>
             </footer>
         </main>
