--- a/vendors.html
+++ b/vendors.html
@@ -22,9 +22,12 @@
                     <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
                     <li class="active"><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
+                    <li><a href="payroll.html"><i class="fas fa-money-check-alt"></i> <span>Payroll</span></a></li>
                     <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="compliance.html"><i class="fas fa-clipboard-check"></i> <span>Compliance</span></a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> <span>Reports & Analytics</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
@@ -57,44 +60,46 @@
                 </div>
 
                 <div class="card">
-                    <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>Vendor Name</th>
-                                <th>Service/Product</th>
-                                <th>Contact Person</th>
-                                <th>Phone</th>
-                                <th>Email</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Safety Gear Pro</td>
-                                <td>PPE Supplies</td>
-                                <td>Mr. David Mark</td>
-                                <td>+234 901 111 2222</td>
-                                <td>david.mark@safetypro.com</td>
-                                <td>
-                                    <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                    <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Delete</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>NetConnect Solutions</td>
-                                <td>Communication Tools</td>
-                                <td>Ms. Grace Effiong</td>
-                                <td>+234 802 333 4444</td>
-                                <td>grace.effiong@netconnect.com</td>
-                                <td>
-                                    <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                    <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Delete</button>
-                                </td>
-                            </tr>
+                    <div class="table-responsive">
+                        <table class="data-table">
+                            <thead>
+                                <tr>
+                                    <th>Vendor Name</th>
+                                    <th>Service/Product</th>
+                                    <th>Contact Person</th>
+                                    <th>Phone</th>
+                                    <th>Email</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Safety Gear Pro</td>
+                                    <td>PPE Supplies</td>
+                                    <td>Mr. David Mark</td>
+                                    <td>+234 901 111 2222</td>
+                                    <td>david.mark@safetypro.com</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Delete</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>NetConnect Solutions</td>
+                                    <td>Communication Tools</td>
+                                    <td>Ms. Grace Effiong</td>
+                                    <td>+234 802 333 4444</td>
+                                    <td>grace.effiong@netconnect.com</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i> Delete</button>
+                                    </td>
+                                </tr>
                             </tbody>
-                    </table>
+                        </table>
+                    </div>
                 </div>
             </section>
 
