--- a/pensions.html
+++ b/pensions.html
@@ -22,9 +22,12 @@
                     <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
                     <li><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
+                    <li><a href="payroll.html"><i class="fas fa-money-check-alt"></i> <span>Payroll</span></a></li>
                     <li class="active"><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="compliance.html"><i class="fas fa-clipboard-check"></i> <span>Compliance</span></a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> <span>Reports & Analytics</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
@@ -75,61 +78,63 @@
 
                 <div class="card">
                     <h2>Recent Contributions</h2>
-                    <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th>Employee Name</th>
-                                <th>RSA PIN</th>
-                                <th>Employer Cont.</th>
-                                <th>Employee Cont.</th>
-                                <th>Total</th>
-                                <th>Date</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>CHIGBU LIGHT UDOCHUKWU</td>
-                                <td>PEN11015405987</td>
-                                <td>₦10,000</td>
-                                <td>₦8,000</td>
-                                <td>₦18,000</td>
-                                <td>May 31, 2025</td>
-                                <td class="status-paid">Paid</td>
-                                <td>
-                                    <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                    <button class="btn btn-sm btn-warning"><i class="fas fa-upload"></i> Proof</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>OGUEGBU OKWUCHUKWU PATRICI</td>
-                                <td>PEN11018296884</td>
-                                <td>₦10,000</td>
-                                <td>₦8,000</td>
-                                <td>₦18,000</td>
-                                <td>May 31, 2025</td>
-                                <td class="status-pending">Pending</td>
-                                <td>
-                                    <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                    <button class="btn btn-sm btn-primary"><i class="fas fa-upload"></i> Upload Proof</button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>CHINEDU CURTIS CHIBUISI</td>
-                                <td>PEN11013243178</td>
-                                <td>₦10,000</td>
-                                <td>₦8,000</td>
-                                <td>₦18,000</td>
-                                <td>April 30, 2025</td>
-                                <td class="status-paid">Paid</td>
-                                <td>
-                                    <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                    <button class="btn btn-sm btn-warning"><i class="fas fa-upload"></i> Proof</button>
-                                </td>
-                            </tr>
+                    <div class="table-responsive">
+                        <table class="data-table">
+                            <thead>
+                                <tr>
+                                    <th>Employee Name</th>
+                                    <th>RSA PIN</th>
+                                    <th>Employer Cont.</th>
+                                    <th>Employee Cont.</th>
+                                    <th>Total</th>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>CHIGBU LIGHT UDOCHUKWU</td>
+                                    <td>PEN11015405987</td>
+                                    <td>₦10,000</td>
+                                    <td>₦8,000</td>
+                                    <td>₦18,000</td>
+                                    <td>May 31, 2025</td>
+                                    <td class="status-paid">Paid</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        <button class="btn btn-sm btn-warning"><i class="fas fa-upload"></i> Proof</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>OGUEGBU OKWUCHUKWU PATRICI</td>
+                                    <td>PEN11018296884</td>
+                                    <td>₦10,000</td>
+                                    <td>₦8,000</td>
+                                    <td>₦18,000</td>
+                                    <td>May 31, 2025</td>
+                                    <td class="status-pending">Pending</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        <button class="btn btn-sm btn-primary"><i class="fas fa-upload"></i> Upload Proof</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>CHINEDU CURTIS CHIBUISI</td>
+                                    <td>PEN11013243178</td>
+                                    <td>₦10,000</td>
+                                    <td>₦8,000</td>
+                                    <td>₦18,000</td>
+                                    <td>April 30, 2025</td>
+                                    <td class="status-paid">Paid</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        <button class="btn btn-sm btn-warning"><i class="fas fa-upload"></i> Proof</button>
+                                    </td>
+                                </tr>
                             </tbody>
-                    </table>
+                        </table>
+                    </div>
                 </div>
             </section>
 
@@ -140,4 +145,5 @@
     </div>
     <script src="js/main.js"></script>
 </body>
-</html>
+    </html>
+    
